--- a/getting-started/prerequisites-installation/install-via-cmake.mdx
+++ b/getting-started/prerequisites-installation/install-via-cmake.mdx
@@ -1,11 +1,11 @@
 ---
-title: "Installing with CMake"
-description: "Provides step-by-step instructions to install and configure GoogleTest using CMake, the recommended and most universal build system. Includes sample commands, expected outcomes, and guidance for integrating with C++ projects."
+title: "Installation with CMake"
+description: "Guides users through obtaining, building, and integrating GoogleTest and GoogleMock using CMake, the most common modern build system for C++. Walks through adding GoogleTest to a CMake project, ensuring they can link and build seamlessly."
 ---
 
-# Installing with CMake
+# Installation with CMake
 
-This guide provides clear, step-by-step instructions to install and configure GoogleTest using CMake, the recommended and most universal build system. You'll learn how to build GoogleTest standalone or incorporate it into your existing C++ projects, with sample commands and expected outcomes for each step.
+This guide walks you through obtaining, building, and integrating GoogleTest and GoogleMock using CMake — the most common modern build system for C++. You'll learn how to add GoogleTest to your CMake project to link and build seamlessly.
 
 ---
 
@@ -13,271 +13,263 @@ This guide provides clear, step-by-step instructions to install and configure Go
 
 Before you begin, ensure your environment meets the following:
 
-- **Operating System**: Compatible with Linux, macOS, Windows, or other supported platforms.
-- **C++ Compiler**: Must support C++17 standard or greater.
-- **CMake Version**: Minimum version 3.14 for FetchContent usage; 3.16+ recommended.
-- **Build Tools**: Make, Ninja, Visual Studio, or other tools supported by CMake.
+- **CMake Version:** 3.14 or later (required for FetchContent support)
+- **Compiler:** Must support C++17 (see [System Requirements](/getting-started/prerequisites-installation/system-requirements) for details)
+- **Network:** Access to <https://github.com/google/googletest> if you fetch sources remotely
+- **Permissions:** Ability to create directories and run build commands on your machine
 
 <Tip>
-Verify your compiler supports C++17 by running `g++ --version` or equivalent.
-Ensure CMake is installed by running `cmake --version`.
+Using C++17 is mandatory. Make sure your compiler is configured accordingly (e.g., add `set(CMAKE_CXX_STANDARD 17)` and `set(CMAKE_CXX_STANDARD_REQUIRED ON)` in your project).
 </Tip>
 
 ---
 
-## 2. Installing GoogleTest as a Standalone Project
+## 2. Obtaining and Building GoogleTest with CMake
 
-To install GoogleTest independently and build it with CMake, follow these steps:
+GoogleTest includes a built-in CMakeLists.txt and supports multiple ways to integrate. You can build it standalone or embed it into your project.
 
-### Step 1: Clone the GoogleTest repository
+### 2.1 Building GoogleTest Standalone
+
+Follow these steps to clone and build GoogleTest and GoogleMock as a separate project.
 
 ```bash
-git clone https://github.com/google/googletest.git -b v1.16.0
+# Clone the official repository at a stable release version
+git clone https://github.com/google/googletest.git -b v1.17.0
 cd googletest
+
+# Create a build directory
+mkdir build && cd build
+
+# Generate build files with CMake (includes GoogleMock by default)
+cmake ..
+
+# To build only GoogleTest, disable GoogleMock explicitly:
+# cmake .. -DBUILD_GMOCK=OFF
+
+# Build using the generated build system
+make
+
+# (Optional) Install system-wide (may require administrator privileges)
+sudo make install
 ```
 
-This grabs the stable GoogleTest release.
+- On **Linux/macOS**, `make` builds the libraries.
+- On **Windows**, a Visual Studio solution (`gtest.sln`) and project files (.vcproj) will be created automatically. Open with Visual Studio, then build.
+- On **macOS with Xcode**, an `.xcodeproj` file will be generated.
 
-### Step 2: Create and enter your build directory
+<Note>
+You can skip installing globally if you prefer linking directly from the build output.
+</Note>
+
+### 2.2 Incorporating GoogleTest Into Your Existing CMake Project
+
+You have two main ways to add GoogleTest into an existing CMake project:
+
+#### Option A: Linking to Installed GoogleTest
+
+If GoogleTest is installed on your system (e.g., via `sudo make install`), use:
+
+```cmake
+find_package(GTest CONFIG REQUIRED)  # or use pkg_check_modules
+
+add_executable(your_tests test_main.cpp)
+target_link_libraries(your_tests PRIVATE GTest::gtest_main)
+add_test(NAME your_tests COMMAND your_tests)
+```
+
+This method is simple but depends on system-wide installation.
+
+#### Option B: Build GoogleTest as Part of Your Project
+
+Embedding GoogleTest source code into your project ensures consistent compilation and linker settings, avoiding runtime incompatibilities especially on Windows.
+
+There are several ways to do this:
+- Download and place GoogleTest source at a known path.
+- Add GoogleTest as a git submodule.
+- Use CMake's FetchContent module to download at configure time (recommended).
+
+Example using **FetchContent** (requires CMake >= 3.14):
+
+```cmake
+include(FetchContent)
+
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/5376968f6948923e2411081fd9372e71a59d8e77.zip
+)
+
+# For Windows: Use shared runtime matching main project
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+
+FetchContent_MakeAvailable(googletest)
+
+# Your test executable
+add_executable(example example.cpp)
+
+# Link against GoogleTest libraries as needed
+target_link_libraries(example PRIVATE gtest_main)
+
+add_test(NAME example_test COMMAND example)
+```
+
+This method ensures GoogleTest builds with your project's compiler and linker flags.
+
+---
+
+## 3. Configuration & Common Build Options
+
+### 3.1 Handling Visual Studio Runtime Mismatches
+
+By default, GoogleTest uses static runtime libraries `(/MT)` while new Visual Studio projects link dynamically `(/MD)`. This mismatch leads to linking errors such as:
+
+```
+gtest.lib(gtest-all.obj) : error LNK2038: mismatch detected for 'RuntimeLibrary': 
+value 'MTd_StaticDebug' doesn't match value 'MDd_DynamicDebug' in main.obj
+```
+
+**Solution:** Set the CMake option `gtest_force_shared_crt` to `ON`:
+
+```cmake
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+```
+
+This forces GoogleTest to link against the dynamic runtime to match your project.
+
+### 3.2 C++ Standard Version
+
+GoogleTest requires C++17 or later. Set this in your main project `CMakeLists.txt`:
+
+```cmake
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+```
+
+For projects without direct C++ code (e.g., C projects using GoogleTest only for testing), pass compiler flags using:
+
+```bash
+cmake -DCMAKE_CXX_FLAGS="-std=c++17" ..
+```
+
+### 3.3 Building as Shared or Static Library
+
+By default, GoogleTest builds static libraries.
+
+- To build shared libraries (DLLs on Windows), enable CMake's `BUILD_SHARED_LIBS` option:
+
+```bash
+cmake -DBUILD_SHARED_LIBS=ON ..
+```
+
+- Alternatively, add the compiler definition to create a shared library:
+
+```bash
+-DGTEST_CREATE_SHARED_LIBRARY=1
+```
+
+When using shared builds, add:
+
+```bash
+-DGTEST_LINKED_AS_SHARED_LIBRARY=1
+```
+
+to your test compile flags.
+
+### 3.4 Tweaking GoogleTest Behavior
+
+You can adjust GoogleTest by defining control macros (examples):
+
+- To force pthread usage or disable it:
+
+```bash
+-DGTEST_HAS_PTHREAD=1   # force ON
+-DGTEST_HAS_PTHREAD=0   # force OFF
+```
+
+- To rename GoogleTest macros and avoid clashes:
+
+```bash
+-DGTEST_DONT_DEFINE_TEST=1
+```
+
+This requires using `GTEST_TEST()` instead of `TEST()` macros.
+
+---
+
+## 4. Building and Running Your First Tests
+
+### 4.1 Start the Build Process
+
+After integrating GoogleTest, build your tests via CMake:
 
 ```bash
 mkdir build
 cd build
-```
-
-Isolating build files keeps your source directory clean.
-
-### Step 3: Generate build files with CMake
-
-- To build both GoogleTest and GoogleMock (default):
-
-```bash
 cmake ..
+make
 ```
 
-- To build only GoogleTest (excluding GoogleMock):
+On Windows with Visual Studio, open the solution file and build from the IDE.
 
-```bash
-cmake .. -DBUILD_GMOCK=OFF
-```
+### 4.2 Running Tests
 
-You should see output indicating successful configuration.
-
-### Step 4: Build the libraries
-
-```bash
-cmake --build .
-```
-
-On Unix-like systems, you can also run `make` inside the build directory.
-
-### Step 5: (Optional) Install GoogleTest system-wide
-
-If you have system administrator privileges and want to install GoogleTest:
-
-```bash
-sudo cmake --install .
-```
-
-By default, it will install under `/usr/local/` or your system's standard.
-
-<Warning>
-If you do not have root privileges, skip the install step and link your project directly against the built libraries.
-</Warning>
-
-### Verification
-
-- Confirm built libraries are present, such as `libgtest.a` and `libgmock.a` (if built).
-- Running tests provided by GoogleTest can be done via `ctest` inside the build directory:
+Once built, run tests with:
 
 ```bash
 ctest
 ```
 
-You should see tests passing successfully.
-
----
-
-## 3. Integrating GoogleTest into Your Existing CMake Project
-
-Instead of installing GoogleTest system-wide, you can include it directly in your project's build.
-
-### Step 1: Declare GoogleTest dependency using FetchContent
-
-Add the following to your `CMakeLists.txt` at the root of your project:
-
-```cmake
-cmake_minimum_required(VERSION 3.14)
-project(my_project)
-
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-include(FetchContent)
-FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
-)
-
-# For Windows: prevent overriding parent compiler/linker settings
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-FetchContent_MakeAvailable(googletest)
-```
-
-> Replace the URL hash with a current commit hash to keep GoogleTest up to date.
-
-### Step 2: Add your test executable and link GoogleTest
-
-At the bottom of your `CMakeLists.txt`, add:
-
-```cmake
-enable_testing()
-
-add_executable(
-  hello_test
-  hello_test.cc
-)
-target_link_libraries(
-  hello_test
-  GTest::gtest_main
-)
-
-include(GoogleTest)
-gtest_discover_tests(hello_test)
-```
-
-This setup builds your test binary linked against GoogleTest.
-
-### Step 3: Write a simple test file
-
-Create `hello_test.cc` with example assertions:
-
-```cpp
-#include <gtest/gtest.h>
-
-TEST(HelloTest, BasicAssertions) {
-  EXPECT_STRNE("hello", "world");
-  EXPECT_EQ(7 * 6, 42);
-}
-```
-
-### Step 4: Build and run your tests
-
-Build your project with:
+Or execute the test binary directly:
 
 ```bash
-cmake -S . -B build
-cmake --build build
+./example
 ```
 
-Run tests with:
-
-```bash
-cd build
-ctest
-```
-
-Expected output:
-
-```
-Test project /path/to/build
-    Start 1: HelloTest.BasicAssertions
-1/1 Test #1: HelloTest.BasicAssertions ........   Passed    0.00 sec
-
-100% tests passed, 0 tests failed out of 1
-
-Total Test time (real) =   0.01 sec
-```
-
-<Tip>
-Using `FetchContent` ensures your project and GoogleTest share the same compiler settings, preventing issues like runtime mismatches.
-</Tip>
-
----
-
-## 4. Configuration Options and Best Practices
-
-### Key CMake options when building GoogleTest
-
-- `BUILD_GMOCK` (default: ON): Build GoogleMock alongside GoogleTest.
-- `INSTALL_GTEST` (default: ON): Controls whether GoogleTest is installed when running `make install`.
-- `gtest_force_shared_crt` (default: OFF): On Windows, forces using the shared C runtime, matching Visual Studio defaults.
-
-### Setting the C++ standard
-
-Ensure your project explicitly sets:
-
-```cmake
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-```
-
-GoogleTest requires C++17 features.
-
-### Avoiding Runtime Library Mismatches on Windows
-
-If linking fails with runtime library mismatches (e.g., `_MTd_StaticDebug` vs `_MDd_DynamicDebug`), enable `gtest_force_shared_crt`:
-
-```cmake
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-```
-
-### Multi-threaded Testing
-
-GoogleTest automatically detects pthreads when building on supported platforms. You can override this detection with:
-
-```cmake
--DGTEST_HAS_PTHREAD=1
-```
-
-if pthreads support is needed and not automatically detected.
+Tests will run and output results clearly indicating success or failure.
 
 ---
 
 ## 5. Troubleshooting Common Issues
 
-<AccordionGroup title="Common CMake Installation Issues">
-<Accordion title="CMake version too low">
-If `FetchContent_MakeAvailable` is not recognized, confirm you are using CMake >= 3.14.
-Update CMake if necessary from https://cmake.org/install.
+<AccordionGroup title="Troubleshooting Build and Integration Issues">
+<Accordion title="Build Failures due to C++ Standard Version">
+If your build fails with unsupported flags or features, ensure your compiler supports C++17. Update compiler or set `CMAKE_CXX_STANDARD` accordingly.
 </Accordion>
-<Accordion title="Runtime mismatches on Windows">
-Enable `gtest_force_shared_crt` as shown above to fix linker errors related to runtime libraries.
+
+<Accordion title="Runtime Library Mismatch Errors on Windows">
+Set `gtest_force_shared_crt` to `ON` to align runtime linkage between GoogleTest and your project.
 </Accordion>
-<Accordion title="Missing pthread during linking">
-Ensure your environment has `pthread` library installed and CMake finds it.
-On Linux, install with your package manager (e.g., `sudo apt install libpthread-stubs0-dev`).
+
+<Accordion title="GoogleTest Not Found via find_package()">
+Confirm GoogleTest is installed and CMake can find its config files. If installed to a custom prefix, add it to `CMAKE_PREFIX_PATH` or install GoogleTest properly.
 </Accordion>
-<Accordion title="Tests not discovered by CTest">
-Confirm `include(GoogleTest)` is present after your test executable and `gtest_discover_tests()`.
-Verify tests are correctly linked against `GTest::gtest_main`.
+
+<Accordion title="Linker Errors Related to pthreads on MinGW">
+MinGW does not support pthreads in this context. Disable pthreads with `-Dgtest_disable_pthreads=ON` or use CMake's built-in thread handling.
 </Accordion>
 </AccordionGroup>
-
-<Note>
-For detailed troubleshooting, see the [Troubleshooting Common Setup Issues](getting-started/troubleshooting/common-errors) page.
-</Note>
 
 ---
 
 ## 6. Next Steps
 
-- Explore writing your own tests in [Writing and Running Your First Test](getting-started/initial-configuration/first-test-case).
-- Review and tweak advanced configuration options in CMake.
-- Integrate GoogleMock if needed for mocking support.
-- Consult [System Requirements](getting-started/prerequisites-installation/system-requirements) to verify compatibility.
+- Explore [Configuring Your Project](/getting-started/configuration-first-run/configure-project) to customize GoogleTest usage further.
+- Write and run your first test with [Writing and Running Your First Test](/getting-started/configuration-first-run/write-first-test).
+- Check out [Sample Tests and Common Workflows](/getting-started/configuration-first-run/test-samples) for practical examples.
 
 ---
 
-## References and Additional Resources
+## 7. Resources and References
 
-- Official GoogleTest repository CMake files:
-  - [CMakeLists.txt](https://github.com/google/googletest/blob/main/CMakeLists.txt)
-  - [googlemock CMakeLists.txt](https://github.com/google/googletest/blob/main/googlemock/CMakeLists.txt)
-- CMake official documentation: <https://cmake.org/documentation/>
-- [Quickstart: Building with CMake](docs/quickstart-cmake.md)
-- [Primer: Getting Started with Tests](primer.md)
+- GoogleTest CMakeLists.txt and build scripting: [googletest/CMakeLists.txt](https://github.com/google/googletest/blob/main/googletest/CMakeLists.txt)
+- GoogleMock CMake integration: [googlemock/CMakeLists.txt](https://github.com/google/googletest/blob/main/googlemock/CMakeLists.txt)
+- Using pkg-config with GoogleTest: [docs/pkgconfig.md](https://github.com/google/googletest/blob/main/docs/pkgconfig.md)
+- System Requirements: [/getting-started/prerequisites-installation/system-requirements]
+- Troubleshooting: [/getting-started/troubleshooting-validation/common-issues]
+
+<Tip>
+Leverage the FetchContent approach to ensure consistent and automated integration without manual steps or system-wide installs.
+</Tip>
 
 ---
 
-Congratulations! You now have GoogleTest installed and configured using CMake and are set to begin writing and running tests in your C++ projects.
+By following this guide, you will have GoogleTest and GoogleMock correctly integrated into your C++ project using CMake, enabling you to write, compile, and run tests efficiently with the powerful features provided by GoogleTest.
