--- a/getting-started/prerequisites-installation/install-via-bazel.mdx
+++ b/getting-started/prerequisites-installation/install-via-bazel.mdx
@@ -1,80 +1,76 @@
 ---
-title: "Installing with Bazel"
-description: "Covers how to add GoogleTest as a dependency using Bazel build system. Ideal for users in organizations or open-source projects standardizing on Bazel for managing dependencies and builds."
+title: "Installation with Bazel"
+description: "Explains how to set up GoogleTest using Bazel, including configuration in Bazel build files and dependencies. Provides a fast path for developers using Bazel in modern, scalable C++ projects."
 ---
 
-# Installing with Bazel
+# Installation with Bazel
 
-This guide walks you through how to add GoogleTest as a dependency using the Bazel build system. It is tailored for users in organizations or open-source projects that standardize on Bazel for managing their dependencies and builds.
+This guide walks you through setting up GoogleTest within your Bazel-based C++ project. Bazel is the recommended build system for scalable and modern C++ development environments, and this page shows you how to configure the necessary Bazel workspace, dependencies, build files, and commands to compile and run your first GoogleTest test.
 
 ---
 
 ## 1. Prerequisites
 
-Before you start, ensure your environment meets these requirements:
+Before starting, ensure your environment meets the following:
 
-- **Operating system:** Compatible with Linux, macOS, or Windows.
-- **Compiler:** A C++ compiler that supports at least C++17.
-- **Bazel version:** Bazel 7.0 or newer.
+- **Compatible OS**: Linux, macOS, or Windows.
+- **C++ Compiler**: Supporting at least C++17 standard.
+- **Bazel Version**: 7.0 or higher installed ([Install Bazel](https://bazel.build/install)).
 
-For details on platform support, see the [Supported Platforms](platforms.md) page.
+<Tip>
+Bazel uses a workspace directory concept to manage and build your code. This workspace contains a `MODULE.bazel` file to specify external dependencies.
+</Tip>
 
-If Bazel is not installed, follow the [Bazel installation guide](https://bazel.build/install).
+## 2. Setting Up Your Bazel Workspace
 
-<Note>
-The instructions use Unix shell style commands, but they also work on Windows command prompt.
-</Note>
+Follow these steps to create your Bazel workspace and declare GoogleTest as a dependency:
 
----
+<Steps>
+<Step title="Create Workspace Directory">
+Open your terminal and run:
 
-## 2. Set Up a Bazel Workspace
-
-A Bazel workspace is a directory where you manage your source files and build configuration.
-
-### Step 1: Create your workspace directory
-
-Open a terminal and enter:
-
-```bash
+```sh
 mkdir my_workspace && cd my_workspace
 ```
 
-### Step 2: Configure GoogleTest dependency
+This creates and navigates into your workspace root directory, where your source and build files will reside.
+</Step>
 
-Create a file named `MODULE.bazel` in your workspace root directory with the following content:
+<Step title="Create MODULE.bazel to Add GoogleTest">
+Inside `my_workspace`, create a file named `MODULE.bazel` and add the following content:
 
 ```python
 # MODULE.bazel
 
-# Specify the GoogleTest version to use
+# Use the latest stable version of GoogleTest from Bazel Central Registry
 bazel_dep(name = "googletest", version = "1.17.0")
 ```
 
-This configuration tells Bazel to fetch GoogleTest version 1.17.0 from the Bazel Central Registry.
+This declares the GoogleTest dependency from the Bazel Central Registry, enabling Bazel to fetch and build it automatically.
+</Step>
+</Steps>
 
----
+## 3. Writing a Sample Test
 
-## 3. Create and Run a Test Binary
+To validate the setup, create a simple test file:
 
-Now you can write and execute tests using GoogleTest in your Bazel workspace.
-
-### Step 1: Write a simple test
-
-Create a file named `hello_test.cc` in the workspace root with this content:
+1. In `my_workspace`, create `hello_test.cc` with this code:
 
 ```cpp
 #include <gtest/gtest.h>
 
-// A simple test case checking basic assertions.
+// Simple test example checking string and integer equality
 TEST(HelloTest, BasicAssertions) {
-  EXPECT_STRNE("hello", "world");  // Strings should not be equal
-  EXPECT_EQ(7 * 6, 42);              // Arithmetic equality
+  EXPECT_STRNE("hello", "world");  // Expect strings to NOT be equal
+  EXPECT_EQ(7 * 6, 42);                // Expect numeric equality
 }
 ```
 
-### Step 2: Create a Bazel BUILD file
+This test verifies basic GoogleTest assertions in action.
 
-Create a `BUILD` file in the same directory with the following content:
+## 4. Configuring Bazel Build Files
+
+Create a `BUILD` file in the same workspace directory with the following content:
 
 ```python
 cc_test(
@@ -88,20 +84,22 @@ cc_test(
 )
 ```
 
-This defines a Bazel test target compiling your test file and linking against GoogleTest libraries.
+- `cc_test` defines a test binary target.
+- `deps` link against GoogleTest libraries: `gtest` (core) and `gtest_main` (with main program).
 
-### Step 3: Build and run the test
+<Note>
+If your compiler is Clang or GCC, pass `--cxxopt=-std=c++17` when building and testing to enforce C++17 standard. For MSVC, use `--cxxopt=/std:c++17`.
+</Note>
 
-Run the following Bazel command to build and execute your test:
+## 5. Building and Running Tests
 
-```bash
+Build and run your `hello_test` using this command:
+
+```sh
 bazel test --cxxopt=-std=c++17 --test_output=all //:hello_test
 ```
 
-- `--cxxopt=-std=c++17` ensures the compiler uses C++17.
-- `--test_output=all` shows all test logs.
-
-### Expected output snippet:
+Successful output will show GoogleTest running your test and passing, e.g.:
 
 ```
 Running main() from gmock_main.cc
@@ -111,83 +109,53 @@ Running main() from gmock_main.cc
 [  PASSED  ] 1 test.
 ```
 
-Your test binary should compile and run successfully, confirming GoogleTest is set up correctly.
+## 6. Troubleshooting Tips
 
-<Check>
-If the build or test fails:
-- Verify Bazel and your compiler meet version requirements.
-- Ensure `MODULE.bazel` and `BUILD` files have correct syntax.
-- Confirm your environment supports C++17.
-</Check>
+- **Tests Not Found or Not Running?**
+  - Verify `cc_test` target names and `deps` are correct.
+  - Ensure you run `bazel test` in the workspace root.
+- **Compiler Errors on C++17?**
+  - Confirm you pass the `--cxxopt` flag.
+  - Validate your compiler supports C++17.
+- **Dependency Not Found?**
+  - Check the `MODULE.bazel` file for correct syntax and version.
+  - Run `bazel clean --expunge` to clear build cache if issues persist.
 
----
+## 7. Next Steps
 
-## 4. Advanced Notes and Tips
+- Explore [GoogleTest Primer](primer.md) to learn writing sophisticated tests.
+- Review [GoogleTest Feature Highlights](overview/feature-glance/feature-highlights) to leverage assertions and parameterized tests.
+- Continue with [Configuring Your Project](../configuration-first-run/configure-project) page to integrate tests into your development workflow.
 
-### Setting the C++ standard
-
-Bazel does not enforce C++17 by default. The `--cxxopt=-std=c++17` option instructs the compiler to use C++17, which is required by GoogleTest.
-
-For MSVC users, use `--cxxopt=/std:c++17` instead.
-
-### Dependency on `@googletest//:gtest_main`
-
-The `gtest_main` target provides a main() function that initializes and runs the tests. If you want to write your own main(), link only against `@googletest//:gtest`.
-
-### Workspace Layout
-
-Use a consistent Bazel workspace layout as your project grows:
-
-```
-my_workspace/
-├── MODULE.bazel
-├── BUILD
-├── hello_test.cc
-└── <other source files>
-```
-
-### Continuous Integration
-
-Integrate Bazel builds into your CI pipelines by caching Bazel output and running tests with `bazel test` commands similar to the above.
+<Tip>
+Using Bazel Central Registry dependency management is the modern recommended approach. It ensures your GoogleTest library is always up to date and compatible.
+</Tip>
 
 ---
 
-## 5. Next Steps
+By following this guide, you have successfully set up GoogleTest with Bazel, built and run a simple test binary, and configured your workspace for scalable test development.
 
-- Explore writing more complex tests by visiting the [GoogleTest Primer](primer.md).
-- Learn about mock objects and using GoogleMock with GoogleTest.
-- See the [Quickstart for CMake](quickstart-cmake.md) if using CMake instead.
+Start writing more tests to verify your C++ code with confidence and integrate GoogleMock for advanced mocking capabilities as needed.
+
 
 ---
 
-## References and Further Reading
+## References and Additional Resources
 
-- [GoogleTest on Bazel Central Registry](https://registry.bazel.build/modules/googletest)
+- [Bazel Central Registry: GoogleTest](https://registry.bazel.build/modules/googletest)
 - [Bazel C++ Tutorial](https://docs.bazel.build/versions/main/tutorial/cpp.html)
-- [Supported Platforms](platforms.md)
 - [GoogleTest Primer](primer.md)
-- [GoogleTest Assertions](primer.md#assertions)
+- [Supported Platforms and Compilers](../prerequisites-installation/system-requirements.md)
+- Official Bazel Documentation: [bazel.build](https://bazel.build/)
+
 
 ---
 
-## Troubleshooting Common Issues
+## Summary
 
-<AccordionGroup title="Troubleshooting Bazel Setup">
-<Accordion title="Tests fail to compile due to C++ version errors">
-Make sure you pass `--cxxopt=-std=c++17` for Clang or GCC, or `--cxxopt=/std:c++17` for MSVC when running Bazel commands.
-</Accordion>
-<Accordion title="Cannot find GoogleTest libraries or headers">
-Verify that your `MODULE.bazel` file exists and contains the correct `bazel_dep` statement. Run `bazel sync` to fetch dependencies.
-</Accordion>
-<Accordion title="Linker errors related to runtime library mismatch on Windows">
-This usually happens due to mismatch between static/dynamic CRT linking. Configure your build options to match GoogleTest's settings or customize compiler/linker flags accordingly.
-</Accordion>
-</AccordionGroup>
+This page specifically guides developers on installing and using GoogleTest with Bazel. It covers workspace setup, dependency declaration through `MODULE.bazel`, writing minimal test code, creating Bazel build targets, building, running tests, and troubleshooting common issues. It provides a fast, robust path for Bazel users to quickly integrate GoogleTest into modern C++ projects.
+
 
 ---
 
-Congratulations on successfully adding GoogleTest to your Bazel workspace! Your next goal is to start writing comprehensive unit tests to improve code reliability and maintainability.
-
----
-
-<Source url="https://github.com/google/googletest" branch="main" paths={[{"path": "docs/quickstart-bazel.md", "range": "1-108"}]} />
+<Source url="https://github.com/google/googletest" branch="main" paths={[{"path": "docs/quickstart-bazel.md", "range": "1-122"}]} />
